// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Android BpkPickerTrigger should render correctly 1`] = `
<BpkTouchableNativeFeedback
  accessibilityComponentType="button"
  accessibilityTraits={
    Array [
      "button",
    ]
  }
  borderlessBackground={false}
  color={null}
  disabled={false}
  onPress={[Function]}
  style={null}
>
  <Component
    style={
      Object {
        "borderBottomWidth": 1,
        "borderColor": "rgb(230, 228, 235)",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingVertical": 4,
      }
    }
  >
    <BpkIcon
      icon="arrow-down"
      small={true}
      style={null}
    />
  </Component>
</BpkTouchableNativeFeedback>
`;

exports[`Android BpkPickerTrigger should render correctly with a text label 1`] = `
<BpkTouchableNativeFeedback
  accessibilityComponentType="button"
  accessibilityTraits={
    Array [
      "button",
    ]
  }
  borderlessBackground={false}
  color={null}
  disabled={false}
  onPress={[Function]}
  style={null}
>
  <Component
    style={
      Object {
        "borderBottomWidth": 1,
        "borderColor": "rgb(230, 228, 235)",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingVertical": 4,
      }
    }
  >
    <BpkText
      emphasize={false}
      style={Object {}}
      textStyle="base"
    >
      label
    </BpkText>
    <BpkIcon
      icon="arrow-down"
      small={true}
      style={null}
    />
  </Component>
</BpkTouchableNativeFeedback>
`;

exports[`Android BpkPickerTrigger should render correctly with an element label 1`] = `
<BpkTouchableNativeFeedback
  accessibilityComponentType="button"
  accessibilityTraits={
    Array [
      "button",
    ]
  }
  borderlessBackground={false}
  color={null}
  disabled={false}
  onPress={[Function]}
  style={null}
>
  <Component
    style={
      Object {
        "borderBottomWidth": 1,
        "borderColor": "rgb(230, 228, 235)",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingVertical": 4,
      }
    }
  >
    <Component />
    <BpkIcon
      icon="arrow-down"
      small={true}
      style={null}
    />
  </Component>
</BpkTouchableNativeFeedback>
`;

exports[`Android BpkPickerTrigger should render correctly with custom styles 1`] = `
<BpkTouchableNativeFeedback
  accessibilityComponentType="button"
  accessibilityTraits={
    Array [
      "button",
    ]
  }
  borderlessBackground={false}
  color={null}
  disabled={false}
  onPress={[Function]}
  style={
    Object {
      "marginTop": 10,
    }
  }
>
  <Component
    style={
      Object {
        "borderBottomWidth": 1,
        "borderColor": "rgb(230, 228, 235)",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingVertical": 4,
      }
    }
  >
    <BpkText
      emphasize={false}
      style={Object {}}
      textStyle="base"
    >
      label
    </BpkText>
    <BpkIcon
      icon="arrow-down"
      small={true}
      style={null}
    />
  </Component>
</BpkTouchableNativeFeedback>
`;

exports[`Android BpkPickerTrigger should render correctly with the disabled prop 1`] = `
<BpkTouchableNativeFeedback
  accessibilityComponentType="button"
  accessibilityTraits={
    Array [
      "button",
      "disabled",
    ]
  }
  borderlessBackground={false}
  color={null}
  disabled={true}
  onPress={[Function]}
  style={null}
>
  <Component
    style={
      Object {
        "borderBottomWidth": 1,
        "borderColor": "rgb(230, 228, 235)",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingVertical": 4,
      }
    }
  >
    <BpkText
      emphasize={false}
      style={
        Object {
          "color": "rgb(230, 228, 235)",
        }
      }
      textStyle="base"
    >
      label
    </BpkText>
    <BpkIcon
      icon="arrow-down"
      small={true}
      style={null}
    />
  </Component>
</BpkTouchableNativeFeedback>
`;
